<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Master Of Constellations</string>
	<string name="app_name_short">MOC</string>
	<string name="app_version">MOC Beta 1.3</string>
	<string name="singleplayer">Play Singleplayer</string>
	<string name="multiplayer">Play Multiplayer</string>
	<string name="help">Help</string>
	<string name="options">Options</string>
	<string name="other_games">Other Games</string>
	<string name="exit">Exit Game</string>
	<string name="back">Back</string>
	<string name="coming_soon">Coming Soon!</string>
	<string name="volume">Volume</string>
	<string name="vibration">Vibration</string>
	<string name="combat_length">Combat\nLength</string>
	<string name="lengthLong">Long</string>
	<string name="medium">Medium</string>
	<string name="fast">Fast</string>
	<string name="save">Save</string>
	<string name="MOG" translatable="false">MOG</string>
    <string name="starDrive" translatable="false">Star Drive</string>
	<string name="other_other_games">Your advertisement may be here!</string>
	<string name="introduction">Introduction</string>
	<string name="stars">Colonies</string>
	<string name="ships">Ships</string>
	<string name="economy">Economy</string>
	<string name="turn">Turn</string>
	<string name="menu">Menu</string>
	<string name="new_game">New Game</string>
	<string name="galaxy_size">Space Size:</string>
	<string name="create">Create</string>
	<string name="opponents">Opponents:</string>
	<string name="main_menu">Main Menu</string>
	<string name="density">Density:</string>
	<string name="continue_game">Continue Game</string>
	<string name="help_introduction">Master Of Constellations\nis a 4x space strategy game. You lead one of space-dwelling\nraces in all the aspects of its existence.\nExplore the galaxy.\nExpand your empire.\nExploit new discoveries.\nExterminate your rivals.</string>
    <string name="help_colonies">Stars that have their names colored with color you\'ve chosen are under your control. Ones with wite names are neutral, all other are enemy-controlled. Initially each rase owns one star. To go to star view, doubleclick one of your stars. Each star has it\'s own fertility, richness and scientific potential. Theese values impact food, production and IT produced each turn. You can change ammount of population assigned to each category by scrollig scrolls. Each colony can build something. By default they will build nothing, filling storage. They can also biuld ships, buildings or economy.</string>
    <string name="player_color">Player Color:</string>
    <string name="fertility">Fertility:</string>
    <string name="richness">Richness:</string>
    <string name="max_population">Max Population:</string>
    <string name="population">Population:</string>
    <string name="name">Name:</string>
    <string name="scientific_potential">Science:</string>
    <string name="empty_space">Void</string>
    <string name="load_game">Load Game</string>
    <string name="owner">Owner:</string>
    <string name="owner_0">Neutral</string>
    <string name="owner_player">You</string>
    <string name="no_ships">No ships in\nselected region.</string>
    <string name="selected">SEL</string>
    <string name="morale">Morale:</string>
    <string name="storage">Storage:</string>
    <string name="food">Food:</string>
    <string name="production">Production:</string>
    <string name="done">Done</string>
    <string name="building">Building:</string>
    <string name="idle">Idle</string>
    <string name="change">Change</string>
    <string name="in_queue">In Queue</string>
    <string name="ok">OK</string>
	<string name="launch_ships">Launch\nSelected\nShips</string>
	<string name="launch_ships2">Launch ships&#8230;</string>
	<string name="launch_ships3">Launch</string>
	<string name="select_star">Select star&#8230;</string>
    <string name="hp">Hp:</string>
    <string name="attack">Attack:</string>
    <string name="speed">Speed:</string>
    <string name="rename">Rename</string>
    <string name="rename2">Rename&#8230;</string>
    <string name="destroy">Destroy</string>
    <string name="destroy2">Destroy?</string>
    <string name="canColonize">Colonizer:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name_hint">New name here&#8230;</string>
	<string name="enter_name">Enter name&#8230;</string>
    <string name="confirm">Confirm</string>
	<string name="loading">Loading&#8230;</string>
	<string name="generating">Generating galaxy&#8230;</string>
	<string name="maintenance">Maintenance:</string>
	<string name="maintenance_short">Maint.:</string>
	<string name="maintenance_short_ship">Ship\nmaint.:</string>
	<string name="maintenance_short_building">Build.\nmaint.:</string>
	<string name="ship0">Scout</string>
	<string name="ship1">Drednout</string>
	<string name="ship2">Frigate</string>
	<string name="ship3">Cruiser</string>
	<string name="ship4">WorldShip</string>
	<string name="ship5">Colony Ship</string>
	<string name="income">Incomes:</string>
	<string name="costs">Expenses:</string>
	<string name="taxes">Taxes:</string>
	<string name="total">Total:</string>
	<string name="position">Position:</string>
	<string name="destination">Destination:</string>
	<string name="colonize">Colonize</string>
	<string name="colonize2">Colonize&#8230;</string>
	<string name="colonize3">Found\ncolony?</string>
	<string name="game_lost">Game over!</string>
	<string name="game_lost2">There are no more stars left under your control.\nTry again!</string><!--You've been exterminated!-->
	<string name="game_won">Game won!</string>
	<string name="game_won2">You have defeated all the opponents! Congratulations!</string>
	<string name="continue_playing">Continue playing?</string>
	<string name="toMainMenu">To main menu</string>
	<string name="no_events">No events.</string>
	<string name="no_buildings">No buildings.</string>
	<string name="map">Map</string>
	<string name="has_reached_destination">has reached it\'s destination</string>
	<string name="colony">Colony</string>
	<string name="of_colony">colony</string>
	<string name="star">Star</string>
	<string name="no_stars">No stars</string>
	<string name="colony_idle">is idle! Production gets stored.</string>
	<string name="colony_found">has been colonized!</string>
	<string name="colony_conquered">has been conquered!</string>
	<string name="colony_died_out">has died out!</string>
	<string name="colony_population_decreased">has decreased!</string>
	<string name="has_reached_billion">has reached one billion!</string>
	<string name="ship_constructed">has finished building ship</string>
	<string name="delete_checked">Delete checked</string>
	<string name="star_population">Population</string>
	<string name="your">Your</string>
	<string name="of_your">of your</string>
	<string name="enemy">Enemy</string>
	<string name="skip">Skip</string>
	<string name="combat">Combat</string>
	<string name="system">System</string>
	<string name="winner">Winner: </string>
	<string name="defaults">Default</string>
	<string name="random">Random</string>
	<string name="buildings">Buildings</string>
	<string name="add">Add</string>
	<string name="build">Build</string>
	<string name="build2">Build?</string>
	<string name="cost">Cost:</string>
	<string name="no_items">Nothing to show.</string>
	<string name="remove2">Cancel building?</string>
	<string name="show_damage">Show damage</string>
	<string name="farm">Farm</string>
	<string name="farm2">Farm</string>
	<string name="factory">Factory</string>
	<string name="research_center">Research Centre</string>
	<string name="city">City</string>
	<string name="bank">Bank</string>
	<string name="message_farm">food per assigned colonist.</string>
	<string name="message_factory">production per assigned colonist.</string>
	<string name="message_research_center">IT per assigned colonist.</string>
	<string name="message_city">max population.</string>
	<string name="message_bank">per colonist.</string>
	<string name="building_constructed">has finished building</string>
	<string name="no_buildings_left">No possible buildings!</string>
	<string name="improve">Improve</string>
	<string name="improve2">Improve?</string>
	<string name="next_level">Next level:</string>
	<string name="level">Level:</string>
	<string name="trade">Trade:</string>
	<string name="trade2">Trade</string>
	<string name="what_to_do">What should we do?</string>
	<string name="fill_storage">Fill storage</string>
	<string name="delete2">Delete?</string>
	<string name="save2">Save?</string>
	<string name="size">Map size:</string>
	<string name="number_of_stars">Number of stars:</string>
	<string name="enemy_count">Number of opponents:</string>
	<string name="free_slot">Empty slot</string>
	<string name="slot">Slot</string>
	<string name="economy_collapsing">Warning! Your economy is collapsing due to negative tressury!</string>
	<string name="ship">ship</string>
	<string name="abandoned">We have abandoned</string>
	<string name="construction">building</string>
	<string name="because_of_economy">due to our economy being unable to support that any longer.</string>
	<string name="doNotShowThisAgain">Don\'t show this again.</string>
	<string name="doShowTurnEvents">Show events</string>
	<string name="science">Science</string>
	<string name="each_turn">Every turn:</string>
	<string name="effects">Effects:</string>
	<string name="ship_attack">Ship attack:</string>
	<string name="ship_hp">Ship hp:</string>
	<string name="to_the_next_level">To the next level:</string>
</resources>
