<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@color/background_main"
    android:orientation="vertical"
	android:gravity="center">
	
	<Space
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:layout_margin="5dp"/>

	<LinearLayout
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:id="@+id/layout_main"
		android:background="@color/background_base">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:text="@string/main_menu"
			style="@style/MainTextStyle"/>
		
		<Button
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:text="@string/singleplayer"
			style="@style/MainButtonStyle"
			android:id="@+id/singleplayer"/>

		<Button
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:text="@string/help"
			style="@style/MainButtonStyle"
			android:id="@+id/help"/>

		<Button
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:text="@string/multiplayer"
			style="@style/MainButtonStyle"
			android:id="@+id/multiplayer"/>

		<Button
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:text="@string/options"
			android:id="@+id/options"
			style="@style/MainButtonStyle"/>

		<Button
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:text="@string/other_games"
			android:id="@+id/other_games"
			style="@style/MainButtonStyle"/>

		<Button
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:text="@string/exit"
			style="@style/MainButtonStyle"
			android:id="@+id/exit"/>

	</LinearLayout>
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:textColor="@color/text_color_base"
		android:layout_margin="5dp"
		android:gravity="bottom|left"
		android:textSize="15sp"
		android:layout_weight="1"
		android:text="@string/app_version"/>

</LinearLayout> 
