<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="horizontal"
	android:background="@color/background_main"
	android:gravity="center"
    android:id="@+id/background">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/layout_main"
		android:layout_gravity="center">
		
		<ScrollView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:background="@color/background_base"
				android:layout_marginBottom="10dp"
				android:gravity="center">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="40dp"
					android:text="@string/options"
					style="@style/MainTextStyle"/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:background="@color/background_group"
					android:layout_margin="5dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="40dp"
							android:layout_weight="1"
							android:text="@string/volume"
							android:gravity="center_vertical"
							style="@style/MainTextStyle"/>

						<EditText
							android:layout_width="match_parent"
							android:layout_height="40dp"
							android:layout_weight="1"
							android:id="@+id/volumeEditText"
							android:inputType="numberDecimal"
							style="@style/MainTextStyle"/>

					</LinearLayout>

					<SeekBar
						android:layout_width="match_parent"
						android:layout_height="40dp"
						android:id="@+id/volumeSeekBar"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:background="@color/background_group"
					android:layout_margin="5dp">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/vibration"
						android:gravity="center_vertical"
						style="@style/MainTextStyle"/>

					<CheckBox
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_margin="5dp"
						android:id="@+id/doVibrateCheckBox"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:background="@color/background_group"
					android:layout_margin="5dp">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/show_damage"
						android:gravity="center_vertical"
						style="@style/MainTextStyle"/>

					<CheckBox
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_margin="5dp"
						android:id="@+id/doShowDamageCheckBox"/>

				</LinearLayout>
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:background="@color/background_group"
					android:layout_margin="5dp">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/doShowTurnEvents"
						android:gravity="center_vertical"
						style="@style/MainTextStyle"/>

					<CheckBox
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_margin="5dp"
						android:id="@+id/doShowTurnEventsCheckBox"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="center"
					android:background="@color/background_group"
					android:layout_margin="5dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:text="@string/combat_length"
						android:gravity="center"
						style="@style/MainTextStyle"/>

					<RadioGroup
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginEnd="20dp"
						android:layout_marginRight="20dp">

						<RadioButton
							android:layout_width="match_parent"
							android:layout_height="40dp"
							android:text="@string/lengthLong"
							android:id="@+id/lengthRadioButton1"
							android:textSize="20sp"
							android:layout_margin="5dp"
							android:textColor="@color/text_color_base"/>

						<RadioButton
							android:layout_width="match_parent"
							android:layout_height="40dp"
							android:text="@string/medium"
							android:id="@+id/lengthRadioButton2"
							android:textSize="20sp"
							android:layout_margin="5dp"
							android:textColor="@color/text_color_base"/>

						<RadioButton
							android:layout_width="match_parent"
							android:layout_height="40dp"
							android:text="@string/fast"
							android:id="@+id/lengthRadioButton3"
							android:textSize="20sp"
							android:layout_margin="5dp"
							android:textColor="@color/text_color_base"/>

					</RadioGroup>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<Button
						android:layout_width="match_parent"
						android:layout_height="40dp"
						android:text="@string/save"
						android:id="@+id/save_settings"
						style="@style/MainButtonStyle.Small"
						android:layout_weight="1"/>

					<Button
						android:layout_width="match_parent"
						android:layout_height="40dp"
						android:text="@string/back"
						style="@style/MainButtonStyle.Small"
						android:id="@+id/back"
						android:layout_weight="1"/>

				</LinearLayout>

			</LinearLayout>

		</ScrollView>
		
	</LinearLayout>

</LinearLayout>
