<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:background="@color/background_base">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/MainTextStyle.Small"
		android:text="@string/launch_ships2"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/MainButtonStyle.Medium"
			android:id="@+id/cancel"
			android:text="@string/cancel"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/MainButtonStyle.Medium"
			android:text="@string/launch_ships3"
			android:id="@+id/done"/>

	</LinearLayout>

</LinearLayout>