<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:background="@color/background_space">
	
	<LinearLayout
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:id="@+id/layout_main"
		android:background="@color/background_main"
		android:orientation="vertical">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:background="@color/background_base"
			android:orientation="vertical">
			
			<TextView
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:text="@string/science"
				style="@style/MainTextStyle"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					style="@style/MainTextStyle.Small"
					android:text="@string/each_turn"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:id="@+id/each_turn"
					style="@style/MainTextStyle.Small"
					android:text="error"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					style="@style/MainTextStyle.Small"
					android:text="@string/level"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:id="@+id/level"
					style="@style/MainTextStyle.Small"
					android:text="error"/>

			</LinearLayout>


			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					style="@style/MainTextStyle.Small"
					android:text="@string/to_the_next_level"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:id="@+id/to_the_next_level"
					style="@style/MainTextStyle.Small"
					android:text="error"/>

			</LinearLayout>
			
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_margin="5dp"
			android:background="@color/background_base">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/MainTextStyle"
				android:text="@string/effects"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					style="@style/MainTextStyle.Small"
					android:text="@string/ship_attack"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:id="@+id/ship_attack"
					style="@style/MainTextStyle.Small"
					android:text="error"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					style="@style/MainTextStyle.Small"
					android:text="@string/ship_hp"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:id="@+id/ship_hp"
					style="@style/MainTextStyle.Small"
					android:text="error"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					style="@style/MainTextStyle.Small"
					android:text="@string/production"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:id="@+id/production"
					style="@style/MainTextStyle.Small"
					android:text="error"/>

			</LinearLayout>

		</LinearLayout>
		
		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/MainButtonStyle"
			android:text="@string/done"
			android:id="@+id/done"/>
		
	</LinearLayout>
	
</LinearLayout>
