<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_space">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:id="@+id/layout_main"
		android:background="@color/background_main"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/MainTextStyle"
			android:text="@string/build"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/MainButtonStyle"
			android:text="@string/ships"
			android:id="@+id/ships"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:id="@+id/ships_container"
			android:layout_marginLeft="50dp"
			android:layout_marginStart="50dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginRight="5dp"
			android:layout_marginEnd="5dp">

		</LinearLayout>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/MainButtonStyle"
			android:text="@string/buildings"
			android:id="@+id/buildings"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:id="@+id/buildings_container"
			android:layout_marginLeft="50dp"
			android:layout_marginStart="50dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginRight="5dp"
			android:layout_marginEnd="5dp"/>
		
		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/MainButtonStyle"
			android:text="@string/back"
			android:id="@+id/back"/>

	</LinearLayout>

</ScrollView>
